--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-get-location": "^2.2.1",
+    "react-native-image-picker": "^5.0.0",
     "react-native-reanimated": "^1.0.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2"
