--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native-image-picker": "^5.0.0",
     "react-native-reanimated": "^1.0.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "react-native-screens": "^3.18.2",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
